--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
       content="CrossWord Studio - Create and solve crossword puzzles"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700&display=swap" rel="stylesheet">
     <title>CrossWord Studio</title>
   </head>
   <body>
